--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dedot": "^0.14.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.1",
     "react": "19.1.0",
@@ -24,6 +25,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@dedot/chaintypes": "^0.123.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
