--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "registry:build": "shadcn build"
   },
   "dependencies": {
+    "@coong/sdk": "^0.0.23",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +20,7 @@
     "next": "15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-use": "^17.6.0",
     "shadcn": "^2.4.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
